# TextUI

./: README.md
examples/: CMakeLists.txt  README.md  main.cpp
src/: CMakeLists.txt
src/core/: BoxStyle.h  Color.h  RenderBuffer.cpp  Renderer.cpp  Renderer.h  SimpleAPI.cpp  Terminal.cpp  Terminal.h  Terminal_new.cpp  WidgetManager.cpp  WidgetManager.h
src/widgets/: MenuBar.h  ProgressBar.h  TextBox.h  Widget.h
src/window/: Dialog.cpp  Dialog.h  ModalDialog.cpp  ModalWindowManager.h  Window.cpp  Window.h
